tests/run-pass/ice-2727.rs
pub fn f(new: fn()) {
    new();
}

fn main() {}
